--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="./src/css/style.css">
         <script src="./lib/js/three.js"></script>
-        <code><script src="/lib/js/d3.min.js"></script></code>
+        <code><script src="./lib/js/d3.min.js"></script></code>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="./lib/js/OrbitControls.js"></script>
